--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,16 @@
   <meta charset="utf-8">
 <title>Sergio Barker</title>
   <link rel="icon" href="../styles/imgs/githubwhite.png" type="image/png" sizes="18x18">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/mobile.css">
   <link rel="stylesheet" type="text/css" href="./styles/laptop.css">
   <link rel="stylesheet" type="text/css" href="./styles/desktop.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body ng-controller="mainCtrl">
-  <header class="navigation" id="headerNav">
+  <nav class="navigation" id="headerNav">
 
     <a href="#top">
       <div class="home">
@@ -42,7 +44,7 @@
       </div>
     </div>
 
-  </header>
+  </nav>
     <main>
       <!-- <div class="time">
       <script type="text/javascript">
@@ -56,6 +58,9 @@
     </main>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/7c1d739023.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/mainCtrl.js"></script>
 <script src="./js/service.js"></script>
