--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <title>Sergio Barker</title>
-  <link rel="icon" href="../styles/imgs/githubwhite.png" type="image/png" sizes="18x18">
+  <link rel="icon" href="./views/imgs/githubwhite.png" type="image/png" sizes="18x18">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/mobile.css">
